--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopsidekick",
-  "homepage": "https://github.com/jah09/dailyroutinebud",
+  "homepage": "https://jah09.github.io/dailyroutinebud",
   "private": true,
   "version": "0.0.0",
   "type": "module",
